# extensions-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cert.pem  dev-requirements.txt  development.yml  env.example  manage.py  production.yml  prometheus.yml  pyproject.toml  requirements.txt
.env/: env.example
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build_and_test.yml  deploy.yml  linter-backend.yml  linter.yml
.run/: backend-dev.run.xml  backend.run.xml  backend_tests.run.xml  dev -- --host.run.xml  docker-dev.run.xml  extensions-app.run.xml  frfontend_tests.run.xml  frontend.run.xml  full-app-local.run.xml
ansible/: deploy.yml
ansible/inventory/: inventory.ini
ansible/vars/: main.yml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
backend/config/: api_router.py  asgi.py  celery.py  helper_functions.py  load_settings.py  loguru_config.py  urls.py  wsgi.py
backend/config/gunicorn/: gunicorn_dev_config.py  gunicorn_prod_config.py
backend/config/settings/: base.py  development.py  production.py  test_settings.py
backend/contact/: admin.py  apps.py  models.py  signals.py  tasks.py  views.py
backend/contact/api/: serializers.py  views.py
backend/payment/: admin.py  error_handler.py  models.py  stripe_service.py  urls.py  views.py
backend/requirements/: dev-requirements.txt  requirements.txt
backend/scraper/: admin.py  models.py  rss_feed_parser.py  tasks.py
backend/scripts/: start
backend/scripts/beat/: start
backend/scripts/flower/: start
backend/scripts/worker/: start
backend/templates/: all_extensions.html  base.html  productivity_ranking_stats_list.html
backend/tests/: test_admin.py  test_api.py  test_models.py  test_tasks.py  test_urls.py
backend/tests/test_config/: test_configurations.py  test_urls.py
backend/tests/test_scraper/: test_upworkrssfeedparser.py
backend/tests/test_users/: test_admin.py  test_api.py  test_models.py
backend/tests/tests_contact/: test_api_views.py  test_models.py  test_signals.py  test_views.py
backend/users/: adapters.py  admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
backend/users/api/: serializers.py  views.py
compose/development/: Dockerfile  start
compose/development/beat/: start
compose/development/worker/: start
config/: urls.py
config/settings/: base.py  development.py
django_vue_template/: asgi.py  settings.py  urls.py  wsgi.py
docs/: architecture_diagram
frontend/: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  error.vue  index.html  nuxt.config.ts  package-lock.json  package.json  vite.config.js  vite.config.mjs
frontend/assets/images/: imgAPI.js
frontend/assets/scss/: _common.scss  _functions.scss  _media-queries.scss  _mixins.scss
frontend/assets/text/: brand.js  link.js
frontend/components/Banner/: Banner.vue  banner-style.scss
frontend/components/Cards/: Pricing.vue  cards-style.scss
frontend/components/Counter/: Counter.vue  counter-style.scss
frontend/components/Faq/: Faq.vue
frontend/components/Feature/: Feature.vue
frontend/components/Footer/: Footer.vue  FooterWithDeco.vue
frontend/components/Forms/: Contact.vue  Login.vue  Register.vue  form-style.scss
frontend/config/: theme.txt
frontend/lang/: ar-AR.json  de-DE.json  en-US.json  id-ID.json  languages.js  pl-PL.json  pt-PT.json  zh-ZH.json
frontend/layouts/: default.vue
frontend/pages/: confirmEmail.vue  index.vue  privacy.vue  terms.vue
frontend/scripts/: start
frontend/src/: App.vue  main.js
frontend/tests/: Newsletter.spec.js
grafana/: grafana.db
nginx/: nginx.conf
requirements/: requirements.txt
tests/: test_pipline.py
(+247 files in other folders)
